[package]
name = "clobbered"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "v6", "serde"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
